--- a/canvastrial/templates/session.html
+++ b/canvastrial/templates/session.html
@@ -2,13 +2,12 @@
   <html lang="en">
   <head>
     <title>Canvas Testing</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='canvas.js') }}"></script>
     <link rel="stylesheet" href="./static/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
+   
  
   </head>
   <body onload="init()">
@@ -20,7 +19,8 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
-
+    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
 
     <!-- <div class="toolkit">
       <div class = "tool" id="green" onclick="color(this)">
@@ -45,12 +45,12 @@
       <div class = "tool" style="width:15px;height:15px;background:white;border:2px solid;" id="white" onclick="color(this)"></div>
       <input type="checkbox" id="updatecanvas">
     </div> -->
-
     <!-- <canvas id="grid"style="position: absolute; left: 0; top: 500; z-index: 0;"></canvas> -->
     <canvas id="can" style="position: absolute; left: 0; top: 500; z-index: 1;"></canvas>
     <div id="toolkit">
         <input type="color" id="colorPicker">
-        <input type="range">
+        <label id="strokePx" ></label>
+        <input type="range" id="strokeSlider" min = "1" max = "100" oninput="PrintSlider">
         
     </div>
 
