--- a/canvastrial/static/css/main.css
+++ b/canvastrial/static/css/main.css
@@ -4,17 +4,7 @@
     
     
 }
-#circle{
-  position:absolute;
-  transform:translate(-50%,-50%);
-  height:35px;
-  width:35px;
-  border-radius:50%;
-  border:2px solid black;
-  z-index:1;
-  cursor:none;
 
-}
 #cursorcanvas
 {
   position:absolute;
@@ -40,6 +30,7 @@
   padding: 1px 2px;
   outline:none;
   border-radius: 20px;
+  z-index: 2;
 
 }
 
@@ -55,12 +46,10 @@
   position:absolute;
   width: 100%;
   height:60px;
-  background-color: red;
+  background-color: #ff0000;
   left:50%;
   z-index: 2;
-  transform: rotate(360deg);
-  -webkit-transform: translate3d(-50%, -50%, 0); 
-  -moz-transform: translate3d(-50%, -50%, 0);  
+  
   transform: translate3d(-50%, -50%, 0);  
   border-radius: 0px;
   box-shadow: 0px 3px 5px rgb(90,90,90);
