--- a/chatapprefactor/templates/hubbase.html
+++ b/chatapprefactor/templates/hubbase.html
@@ -7,6 +7,10 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0260874841.js" crossorigin="anonymous"></script> <!--Used for icons -->
     <link rel="stylesheet" href="./static/css/styles.css">
+
+
+    {% block head %}
+    {% endblock %} 
     
 </head>
 <body>
@@ -18,13 +22,39 @@
     </header>
 
     <div class="sidebar">
-        <ul>
-            <li><a href=""><i class="fa-regular fa-user"></i>Profile</a></li>
-            <li><a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Chat</a></li>
-            <li><a href=""><i class="fa-solid fa-question"></i>MCQ</a></li>
-            <li><a href=""><i class="fa-regular fa-comment-dots"></i>Feedback</a></li>
+        <ul>    
+                <li>
+                    <ul>
+                    <a href=""><i class="fa-regular fa-user"></i>Profile</a>
+                    </ul>
+                </li>
+                
+                <li>
+                    <ul>
+                        <a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Session</a>
+                    </ul>
+                    <ul>
+                        <a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Session</a>                        
+                    </ul>
+                </li>
+            
+
+            <li><a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Session</a></li>
+            <!-- <li><a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Chat</a></li>
+            <li><a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Canvas</a></li> -->
+
+            <!-- <li><a href=""><i class="fa-solid fa-question"></i>MCQ</a></li> -->
+            <!-- <li><a href=""><i class="fa-regular fa-comment-dots"></i>Feedback</a> -->
+
+            
+            </li>
         </ul>
     </div>
+
+
+
+    {% block body %}
+    {% endblock %}
     </div>
 </body>
 </html>
