--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -248,9 +248,7 @@
             border-radius: 10px;
             font-size:smaller; 
         }
-        .fa-solid-fa-up{
-            height: 800px;
-        }
+
        
     </style>
 </head>
@@ -293,7 +291,7 @@
         <h2 class="room-title text-center">Welcome to chat room {{ room }}</h2>
 
         <div class="container"> 
-        <div class="messages" id="messages"><i class="fa-solid fa-up"></i></div>
+        <div class="messages" id="messages"></div>
         </div>
         
 </body>
